# CTCI

./: .gitignore  README.md
Chapter1/: ArraysAndStringsTest.orig  CMakeLists.txt  Makefile
Chapter1/src/: ArraysAndStrings.cpp  ArraysAndStrings.h  CMakeLists.txt  Makefile
Chapter1/tests/: ArraysAndStrings_test.cpp
Chapter2/: CMakeLists.txt
Chapter2/src/: CMakeLists.txt  LinkedLists.cpp  LinkedLists.h
Chapter2/tests/: LinkedLists_test.cpp
Chapter3/: CMakeLists.txt  MinStackTest  MinStack_v2Test  SetOfStacksTest  SetOfStacks_v2Test  fixedMultiStackTest  multiStackTest
Chapter3/src/: AnimalShelter.cpp  AnimalShelter.h  CMakeLists.txt  FixedMultiStack.cpp  FixedMultiStack.h  MinStack.h  MinStack_v2.cpp  MinStack_v2.h  QueueWithStacks.cpp  QueueWithStacks.h  SetOfStacks.cpp  SetOfStacks.h  SetOfStacks_v2.cpp  SetOfStacks_v2.h  SortedStack.cpp  SortedStack.h  StackInfo.cpp  StackInfo.h  multiStack.cpp  multiStack.h
Chapter3/tests/: AnimalShelter_test.cpp  MinStack_test.cpp  MinStack_v2_test.cpp  QueueWithStacks_test.cpp  SetOfStacks_test.cpp  SetOfStacks_v2_test.cpp  SortedStack_test.cpp  fixedMultiStack_test.cpp  multiStack_test.cpp
Chapter4/: CMakeLists.txt
Chapter4/src/: CMakeLists.txt  Graphs.cpp  Graphs.h  MinimalBST.cpp  MinimalBST.h
Chapter4/tests/: Graphs_test.cpp  MinimalBST_test.cpp
Chapter5/: CMakeLists.txt
Chapter5/src/: BitManipulation.cpp  BitManipulation.h  CMakeLists.txt
Chapter5/tests/: BitManipulation_test.cpp
Chapter6/: EggDrop.cpp
Chapter8/: CMakeLists.txt
Chapter8/src/: CMakeLists.txt  DynamicProgramming.cpp  DynamicProgramming.h
Chapter8/tests/: DynamicProgramming_test.cpp
Data_Structures/: CMakeLists.txt  Hashtable  Hashtable.cpp  Hashtable.h  LinkedList  LinkedList.cpp  LinkedList.h  Makefile  MyHashtable  MyHashtable.cpp  MyHashtable.h  StringBuilder  StringBuilder.cpp  StringBuilder.h  Vector  Vector.h
Data_Structures/src/: BinarySearchTree.h  CMakeLists.txt  Entry.cpp  Entry.h  Hashtable.cpp  Hashtable.h  LinkedList.cpp  LinkedList.h  Makefile  MinHeap.cpp  MinHeap.h  MyHashtable.cpp  MyHashtable.h  Node.cpp  Node.h  Queue.h  RandomBinaryTree.cpp  RandomBinaryTree.h  SNode.cpp  SNode.h  SinglyLinkedList.h  Stack.h  StringBuilder.cpp  StringBuilder.h  Trie.cpp  Trie.h  Vector.cpp  Vector.h
Data_Structures/tests/: BinarySearchTree_test.cpp  Entry_test.cpp  Hashtable_test.cpp  LinkedList_test.cpp  MinHeap_test.cpp  MyHashtable_test.cpp  Node_test.cpp  Queue_test.cpp  RandomBinaryTree_test.cpp  SNode_test.cpp  SinglyLinkedList_test.cpp  Stack_test.cpp  Trie_test.cpp  Vector_test.cpp
