# Add as many libraries as needed

add_library(multiStackLibrary multiStack.cpp)
add_library(fixedMultiStackLibrary FixedMultiStack.cpp)
add_library(MinStackLibrary MinStack.cpp)
add_library(MinStack_v2Library MinStack_v2.cpp)
add_library(SetOfStacksLibrary SetOfStacks.cpp)
add_library(SetOfStacks_v2Library SetOfStacks_v2.cpp)


