# Add as many libraries as needed

add_library(NodeLibrary Node.cpp)
add_library(SNodeLibrary SNode.cpp)
add_library(LinkedListLibrary LinkedList.cpp)
add_library(SinglyLinkedListLibrary SinglyLinkedList.cpp)
add_library(EntryLibrary Entry.cpp)
add_library(VectorLibrary Vector.cpp)
add_library(HashtableLibrary Hashtable.cpp)
add_library(MyHashtableLibrary MyHashtable.cpp)
add_library(StackLibrary Stack.cpp)
add_library(QueueLibrary Queue.cpp)
add_library(BinarySearchTreeLibrary BinarySearchTree.cpp)
add_library(MinHeapLibrary MinHeap.cpp)
